test/data/codegen/valid/nullable_parameter/queries.cypher
// name: PeopleOverAge :many
MATCH (p:Person) WHERE p.age > $minAge RETURN p.name
